Integrate routing and header

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link
-      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lato|Poppins:500&display=swap"
       rel="stylesheet"
     />
     <!--
