Refactor page layout and dish detail page

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="TastyTravel"
-      content="An app which helps people who suffer from food
-    intolerances with information about country cuisine while travelling"
+      name="Tasty Travel"
+      content="Tasty Travel ist die App, die Menschen mit Nahrungsmittelintoleranzen auf Reisen im Ausland hilft, sich durch den Dschungel unbekannter Gerichte zu navigieren."
     />
     <link
       href="https://fonts.googleapis.com/css?family=Lato|Poppins:500&display=swap"
@@ -17,7 +16,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>TastyTravel</title>
+    <title>Tasty Travel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
