Fix ingredients toggle bug in storybook

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Tasty Travel"
-      content="Tasty Travel ist die App, die Menschen mit Nahrungsmittelintoleranzen auf Reisen im Ausland hilft, sich durch den Dschungel unbekannter Gerichte zu navigieren."
+      content="Tasty Travel helps people with food intolerances when travelling abroad to navigate their way through the jungle of unknown food. In the restaurant, the user can use a search function to quickly and easily check which dish is suitable for his individual food intolerance. He also receives helpful translations, pictures and a list of ingredients. He can then make an informed decision or alternatively choose another dish."
     />
     <link
       href="https://fonts.googleapis.com/css?family=Lato|Poppins:500&display=swap"
